--- a/server/package.json
+++ b/server/package.json
@@ -7,42 +7,38 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
-    "create:migration": "npx micro-orm migration:create"
+    "typeorm": "typeorm-ts-node-esm"
   },
   "devDependencies": {
     "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^17.0.31",
+    "@types/nodemailer": "^6.4.6",
+    "@types/uuid": "^8.3.4",
     "concurrently": "^7.1.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^5.1.3",
-    "@mikro-orm/core": "^5.1.3",
-    "@mikro-orm/migrations": "^5.1.3",
-    "@mikro-orm/postgresql": "^5.1.3",
     "apollo-server-express": "^3.7.0",
     "argon2": "^0.28.5",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "graphql": "^15.3.0 ",
     "helmet": "^5.0.2",
+    "ioredis": "^5.2.3",
+    "nodemailer": "^6.8.0",
     "pg": "^8.7.3",
-    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0"
   }
 }
