--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
