--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "author": "akuma",
   "license": "MIT",
   "scripts": {
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
+    "build": "tsc",
     "watch": "tsc -w",
     "dev": "concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
     "typeorm": "typeorm-ts-node-esm"
@@ -18,6 +20,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.1.0",
+    "gen-env-types": "^1.3.4",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
@@ -30,6 +33,7 @@
     "cors": "^2.8.5",
     "dataloader": "^2.2.2",
     "dotenv": "^16.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "graphql": "^15.3.0 ",
